crates/schemas/tests/compile_fail/device_id_construction.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/device_id_construction.rs:10:34
   |
10 |     let _wrapped = DeviceId::new(device_id); //~ ERROR
   |                    ------------- ^^^^^^^^^- help: try using a conversion method: `.to_string()`
   |                    |             |
   |                    |             expected `String`, found `DeviceId`
   |                    arguments to this function are incorrect
   |
note: associated function defined here
  --> src/domain.rs
   |
   |     pub fn new(id: String) -> Result<Self, DomainError> {
   |            ^^^
